# starrailres.py

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: avatar_info.py  character_info.py
starrailres/: index.py  utils.py
starrailres/models/: avatars.py  characters.py  common.py  descriptions.py  elements.py  info.py  items.py  light_cones.py  paths.py  properties.py  relics.py
