[tool.poetry]
name = "starrailres"
version = "1.3.1"
description = "StarRailRes parse package"
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
packages = [{ include = 'starrailres' }]
readme = "README.md"
repository = "https://github.com/Mar-7th/StarRailRes-Python"

[tool.poetry.dependencies]
python = "^3.8"
msgspec = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "^23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
