[tool.poetry]
name = "starrailres"
version = "3.2.1"
description = "StarRailRes parse package"
authors = ["mobyw <mobyw66@gmail.com>"]
license = "MIT"
packages = [{ include = 'starrailres' }]
readme = "README.md"
repository = "https://github.com/Mar-7th/starrailres.py"

[tool.poetry.dependencies]
python = "^3.9"
msgspec = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
